Bug 310121 - Initial synchronization hangs
Summary: Initial synchronization hangs
Status: RESOLVED FIXED
Alias: None
Product: simon
Classification: Unmaintained
Component: simond (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: LO normal
Target Milestone: ---
Assignee: Peter Grasch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-14 22:05 UTC by Peter Grasch
Modified: 2012-11-14 23:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Grasch 2012-11-14 22:05:20 UTC
The initial, empty synchronization hangs (never completes).

When providing any change to the default configuration, the hung synchronization is correctly aborted and the new one completes successfully.
Comment 1 Peter Grasch 2012-11-14 23:06:52 UTC
Git commit 6cb806e2e448fb307979e7b8e33147de88a7f955 by Peter Grasch.
Committed on 15/11/2012 at 00:04.
Pushed by grasch into branch 'master'.

Correctly relaying model compilation / adaption cancellation in SPHINX

M  +2    -2    simonlib/speechmodelcompilation/modelcompilationmanagersphinx.cpp

http://commits.kde.org/simon/6cb806e2e448fb307979e7b8e33147de88a7f955