Correctly relaying model compilation / adaption cancellation in SPHINX

BUG: 310121